--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.3.2",
-    "vue": "^2.6.10",
-    "vue-class-component": "^7.0.2",
-    "vue-property-decorator": "^8.3.0",
-    "vue-router": "^3.1.3"
+    "vue": "^2.6.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
@@ -31,7 +28,7 @@
     "pre-commit": "lint-staged"
   },
   "lint-staged": {
-    "*.{js,vue,ts}": [
+    "*.{js,vue}": [
       "vue-cli-service lint",
       "git add"
     ]
