updated stash naming scheme

--- a/server/static/config.json
+++ b/server/static/config.json
@@ -3,6 +3,10 @@
     {
       "id": "eb7a8794",
       "entry": "Bier"
+    },
+    {
+      "id": "651a681b",
+      "entry": "Wein"
     }
   ],
   "archive": {}
