Redefined stash again

--- a/server/static/config.json
+++ b/server/static/config.json
@@ -1,13 +1,4 @@
 {
-  "current": [
-    {
-      "id": "eb7a8794",
-      "entry": "Bier"
-    },
-    {
-      "id": "651a681b",
-      "entry": "Wein"
-    }
-  ],
+  "current": [],
   "archive": {}
 }
