--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,6 @@ build:
   script:
     - echo "$CI_JOB_TOKEN" | docker login registry.git.rwth-aachen.de --username gitlab-ci-token --password-stdin 
     - docker build -t registry.git.rwth-aachen.de/occloxium-webdev/pizzabot/backend ./server
-    - docker build -t registry.git.rwth-aachen.de/occloxium-webdev/pizzabot/frontend 
-    - docker push registry.git.rwth-aachen.de/occloxium-webdev/pizzabot/frontend:latest ./client
+    - docker build -t registry.git.rwth-aachen.de/occloxium-webdev/pizzabot/frontend ./client
+    - docker push registry.git.rwth-aachen.de/occloxium-webdev/pizzabot/frontend:latest 
     - docker push registry.git.rwth-aachen.de/occloxium-webdev/pizzabot/backend:latest
