Tested volume mounting

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:alpine
+FROM node:12
 
 LABEL maintainer="Alexander Bartolomey"
 
@@ -9,5 +9,7 @@ COPY package*.json ./
 RUN yarn install
 
 COPY . .
+
+RUN ls /static
 
 CMD ["npm", "start"]
