--- a/pizzabot.yaml
+++ b/pizzabot.yaml
@@ -39,6 +39,7 @@ spec:
       containers:
       - name: pizzabot-frontend
         image: registry.git.rwth-aachen.de/occloxium-webdev/pizzabot/frontend:latest
+        imagePullPolicy: Always
         resources:
           limits:
             # memory: "128Mi"
@@ -98,6 +99,7 @@ spec:
       containers:
       - name: pizzabot-backend
         image: registry.git.rwth-aachen.de/occloxium-webdev/pizzabot/backend:latest
+        imagePullPolicy: Always
         resources:
           limits:
             # memory: "128Mi"
@@ -117,7 +119,7 @@ metadata:
   namespace: web
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    cert-manager.io/issuer: "letsencrypt-staging"
+    cert-manager.io/issuer: "letsencrypt-prod"
 spec:
   tls: 
   - hosts:
