removed kubernetes cluster for deployment
interestingly, the kubernetes runner does not obey to the protocol and omits both ENTRYPOINT and
CMD statement

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,4 +22,4 @@ deploy:
     - k rollout restart -n web pizzabot-frontend
     - k rollout restart -n web pizzabot-backend
   tags:
-    - cluster
+    - occloxium-docker
