--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,8 +17,10 @@ build:
 deploy:
   stage: deploy
   image: registry.git.rwth-aachen.de/zoomoid/docker-kubectl:latest
-  script:
-    - cat admin.conf
+  script: 
+    - cat /admin.conf
+    - $kube_config | base64 -d >> /admin.conf
+    - alias k="kubectl --kubeconfig admin.conf"
     - k rollout restart -n web pizzabot-frontend
     - k rollout restart -n web pizzabot-backend
   tags:
