--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,11 +17,13 @@ build:
 deploy:
   stage: deploy
   image: registry.git.rwth-aachen.de/zoomoid/docker-kubectl:latest
+  variables:
+    restart_deployment: "kubectl --kubeconfig /admin.conf rollout restart -n web deployment"
   script: 
     - cat /admin.conf
     # - $kube_config | base64 -d >> /admin.conf
     - alias k="kubectl --kubeconfig /admin.conf"
-    - kubectl --kubeconfig /admin.conf rollout restart -n web pizzabot-frontend
-    - kubectl --kubeconfig /admin.conf rollout restart -n web pizzabot-backend
+    - $restart_deployment pizzabot-frontend
+    - $restart_deployment pizzabot-backend
   tags:
     - occloxium-docker
