Update gitlab yaml to account for deployments

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,7 @@ deploy:
   stage: deploy
   extends: .kubectl
   script:
-    - kubectl rollout restart deployment/pizzabot
+    - kubectl rollout restart deployment/pizzabot-frontend
+    - kubectl rollout restart deployment/pizzabot-backend
   tags:
     - cluster
